; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/bcache/extr_btree.c_bch_btree_node_write_sync.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/bcache/extr_btree.c_bch_btree_node_write_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btree = type { i32 }
%struct.closure = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.btree*)* @bch_btree_node_write_sync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bch_btree_node_write_sync(%struct.btree* %0) #0 {
  %2 = alloca %struct.btree*, align 8
  %3 = alloca %struct.closure, align 4
  store %struct.btree* %0, %struct.btree** %2, align 8
  %4 = call i32 @closure_init_stack(%struct.closure* %3)
  %5 = load %struct.btree*, %struct.btree** %2, align 8
  %6 = getelementptr inbounds %struct.btree, %struct.btree* %5, i32 0, i32 0
  %7 = call i32 @mutex_lock(i32* %6)
  %8 = load %struct.btree*, %struct.btree** %2, align 8
  %9 = call i32 @bch_btree_node_write(%struct.btree* %8, %struct.closure* %3)
  %10 = load %struct.btree*, %struct.btree** %2, align 8
  %11 = getelementptr inbounds %struct.btree, %struct.btree* %10, i32 0, i32 0
  %12 = call i32 @mutex_unlock(i32* %11)
  %13 = call i32 @closure_sync(%struct.closure* %3)
  ret void
}

declare dso_local i32 @closure_init_stack(%struct.closure*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @bch_btree_node_write(%struct.btree*, %struct.closure*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @closure_sync(%struct.closure*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
